# Village-Under-Attack

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Position.h  Project_Review.md  README.md  Resources.cpp  Resources.h  TODO.md  WaveManager.cpp  WaveManager.h  compile_sdl.bat  main_sdl.cpp  sdl_render.h
Buildings/: Barracks.cpp  Barracks.h  Building.cpp  Building.h  ElixirCollector.cpp  ElixirCollector.h  GoldMine.cpp  GoldMine.h  ResourceGenerator.cpp  ResourceGenerator.h  TownHall.cpp  TownHall.h  Wall.cpp  Wall.h
Entities/: Entity.cpp  Entity.h  Npc.cpp  Npc.h  Player.cpp  Player.h
Entities/Enemies/: Bomberman.cpp  Bomberman.h  Enemy.cpp  Enemy.h  Raider.cpp  Raider.h
Entities/Units/: Archer.cpp  Archer.h  Barbarian.cpp  Barbarian.h  Mage.cpp  Mage.h  Unit.cpp  Unit.h  UnitType.h
